--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,6 +31,11 @@
 				</p>
 
 				{{ content }}
+				<hr class="divider" />
+
+				<p class="return-link">
+					<a href="{{ site.baseurl }}/">&lt; return to mission log</a>
+				</p>
 			</main>
 
 			<footer class="site-footer">
