ux / update footer link text

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,11 +34,11 @@
 				<hr class="divider" />
 
 				<p class="return-link">
-					<a href="{{ site.baseurl }}/" aria-label="Return to mission log">
-						<span
-							class="type-target"
-							data-text="&lt; return to mission log"
-						></span>
+					<a
+						href="{{ site.baseurl }}/"
+						aria-label="Exit room and return to home"
+					>
+						<span class="type-target" data-text="&lt; exit room"></span>
 						<span class="cursor"></span>
 					</a>
 				</p>
