--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,18 +11,7 @@
 	</head>
 	<body>
 		<div class="site">
-			<header class="site-header">
-				<h1 class="site-title">
-					<a href="{{ site.baseurl | prepend: site.url }}">{{ site.title }}</a>
-				</h1>
-				<p class="site-desc">{{ site.description }}</p>
-				<div class="xpbar">
-					<div class="xp-meta">💀 Level 1 — 50 XP / 500 XP</div>
-					<div class="xp-track">
-						<div class="xp-fill" style="width: 10%"></div>
-					</div>
-				</div>
-			</header>
+			<header class="site-header">{% include xpbar.html %}</header>
 
 			<main class="site-content">
 				<h1 class="type-header title" data-text="{{ page.title }}">
