layout update / add XP bar include to post pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@
 	</head>
 	<body>
 		<div class="site">
+			<!-- XP bar only (no site title/description) -->
 			<header class="site-header">{% include xpbar.html %}</header>
 
 			<main class="site-content">
@@ -40,6 +41,7 @@
 				<p>Made by Vanessa • <small>TryHackMe Journey</small></p>
 			</footer>
 		</div>
+
 		<script>
 			(function () {
 				// --- config ---
