WIP: local edits before rebase

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,9 @@
 			</main>
 
 			<footer class="site-footer">
-				<p>Made by Vanessa • <small>TryHackMe Journey</small></p>
+				<p>
+					Theme by Vanessa • <small>Design Prototype for TryHackMe blog</small>
+				</p>
 			</footer>
 		</div>
 		<script>
