update all / cleanup

--- a/_includes/xpbar.html
+++ b/_includes/xpbar.html
@@ -2,7 +2,7 @@
 	<div class="rank-meta">
 		Rank: <strong>{{ site.thm.rank }}</strong>
 		<span class="sep">•</span>
-		{{ site.thm.points }} 450 pts
+		{{ site.thm.points }} pts
 		<span class="sep">→</span>
 		Next: {{ site.thm.next_rank }}
 	</div>
